SAA-2008: Parallelize integration tests in CircleCI (#1033)
* SAA-2008: Parallelize integration tests in CircleCI

* SAA-2008: Remove deprecated incremental compilation setting

---------

Co-authored-by: Lance Munslow <lance.munslow@digital.justice.gov.uk>